--- a/app/src/main/res/layout/fragment_license_plate.xml
+++ b/app/src/main/res/layout/fragment_license_plate.xml
@@ -6,38 +6,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <ListView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/users_list"/>
-
-
-    </LinearLayout>
-
-    <LinearLayout
+    <ListView
+        android:id="@+id/users_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_below="@id/add_name"/>
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/add_name"
-            android:layout_weight="1"
-            android:hint="Name"/>
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/add_data"
-            android:text="add"/>
+    <EditText
+        android:id="@+id/add_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:hint="Register fine" />
 
-    </LinearLayout>
+    <Button
+        android:id="@+id/add_data"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/add_name"
+        android:text="add" />
+
+
+
+
 
 
 
