--- a/app/src/main/res/layout/fragment_most_wanted.xml
+++ b/app/src/main/res/layout/fragment_most_wanted.xml
@@ -1,12 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/vpPager"
+
+    <ImageView
+        android:id="@+id/imageViewrambaran"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </androidx.viewpager.widget.ViewPager>
-</LinearLayout>
+        android:layout_height="183dp"
+        android:layout_below="@id/imageViewhoefdraad"
+        app:srcCompat="@drawable/opsporing" />
+
+    <ImageView
+        android:id="@+id/imageViewhoefdraad"
+        android:layout_width="match_parent"
+        android:layout_height="185dp"
+        app:srcCompat="@drawable/hoefdraad" />
+
+    <ImageView
+        android:id="@+id/imagedassasing"
+        android:layout_width="match_parent"
+        android:layout_height="183dp"
+        app:srcCompat="@drawable/opsporing_2"
+        android:layout_below="@+id/imageViewrambaran"/>
+
+    <ImageView
+        android:id="@+id/imagedaniel"
+        android:layout_width="match_parent"
+        android:layout_height="187dp"
+        app:srcCompat="@drawable/opsporing_3"
+        android:layout_below="@+id/imagedassasing"/>
+
+
+</RelativeLayout>
