--- a/app/src/main/res/layout/fragment_license_plate.xml
+++ b/app/src/main/res/layout/fragment_license_plate.xml
@@ -42,6 +42,8 @@
         android:id="@+id/users_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/linear"/>
+        android:layout_below="@id/linear">
+
+    </ListView>
 
 </RelativeLayout>
